// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CampaignDetail component should display default value when it's a new campaign 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        tag="ol"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/app/settings/integrations"
          >
            Integrations
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/app/settings/integrations/smooch_inside/\${integration.get('id')}"
          >
            Chat
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          My new chat
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/app/settings/integrations/smooch_inside/1/campaigns"
          >
            Campaigns
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          active={true}
          tag="li"
        >
          New campaign
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <RealtimeMessagingIntegrationNavigation
    integration={
      Immutable.Map {
        id: 1,
        type: "smooch_inside",
        name: "My new chat",
        decoration: Immutable.Map {
          main_color: "#fefefe",
        },
      }
    }
  />
  <Container
    className="page-container"
    fluid={true}
    tag="div"
  >
    <Row
      tag="div"
    >
      <Col
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Form
          onSubmit={[Function]}
          tag="form"
        >
          <div
            className="mb-4"
          >
            <InputField
              label="Campaign name"
              name="name"
              onChange={[Function]}
              placeholder="My new campaign"
              required={true}
              type="input"
            />
          </div>
          <h5>
            Choose your audience
          </h5>
          <div
            className="mb-4"
          >
            <TriggerRow
              idx={0}
              key="0"
              nbOfTriggers={1}
              onDelete={[Function]}
              onOperatorChange={[Function]}
              onValueChange={[Function]}
              trigger={
                Immutable.Map {
                  key: "current_url",
                  operator: "eq",
                  value: "",
                }
              }
            />
            <UncontrolledDropdown>
              <DropdownToggle
                aria-haspopup={true}
                caret={true}
                className="mr-2"
                color="secondary"
                type="button"
              >
                <i
                  className="material-icons mr-2"
                >
                  add
                </i>
                Add condition
              </DropdownToggle>
              <DropdownMenu
                flip={true}
                tag="div"
              >
                <DropdownItem
                  key="current_url"
                  onClick={[Function]}
                  tag="button"
                  toggle={true}
                  type="button"
                >
                  Current URL
                </DropdownItem>
                <DropdownItem
                  key="time_spent_on_page"
                  onClick={[Function]}
                  tag="button"
                  toggle={true}
                  type="button"
                >
                  Time spent on page
                </DropdownItem>
              </DropdownMenu>
            </UncontrolledDropdown>
          </div>
          <h5>
            Write your message
          </h5>
          <div
            className="mb-4"
          >
            <div
              className="mb-2 authorWrapper"
            >
              <span>
                From: 
              </span>
              <SelectField
                allowCustomValue={false}
                className="authorInput"
                fixedWidth={false}
                onChange={[Function]}
                onSearchChange={[Function]}
                options={
                  Array [
                    Object {
                      "label": <AgentLabel
                        avatar={false}
                        className=""
                        email=""
                        maxWidth="100"
                        name="John"
                        profilePictureUrl=""
                  />,
                      "text": "John",
                      "value": "john@gorgias.io",
                    },
                    Object {
                      "label": <AgentLabel
                        avatar={false}
                        className=""
                        email=""
                        maxWidth="100"
                        name="Doe"
                        profilePictureUrl=""
                  />,
                      "text": "Doe",
                      "value": "doe@gorgias.io",
                    },
                    Object {
                      "label": "Random agent",
                      "text": "randomagent",
                      "value": null,
                    },
                  ]
                }
                placeholder="Select an option"
                singular="option"
                style={Object {}}
                value={null}
              />
            </div>
            <RichField
              displayedActions={
                Array [
                  "BOLD",
                  "ITALIC",
                  "UNDERLINE",
                  "IMAGE",
                  "EMOJI",
                ]
              }
              onChange={[Function]}
              placeholder="Write your message"
              required={true}
              rows="8"
              type="text"
              value={
                Object {
                  "html": undefined,
                }
              }
            />
          </div>
          <Button
            className=""
            color="success"
            tag="button"
          >
            Create & activate campaign
          </Button>
        </Form>
      </Col>
      <Col
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <CampaignPreview
          mainColor="#fefefe"
        />
      </Col>
    </Row>
  </Container>
</div>
`;

exports[`CampaignDetail component should display the campaign correctly when updating it 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        tag="ol"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/app/settings/integrations"
          >
            Integrations
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/app/settings/integrations/smooch_inside/\${integration.get('id')}"
          >
            Chat
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          My new chat
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/app/settings/integrations/smooch_inside/1/campaigns"
          >
            Campaigns
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          active={true}
          tag="li"
        >
          My little campaign
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <RealtimeMessagingIntegrationNavigation
    integration={
      Immutable.Map {
        id: 1,
        type: "smooch_inside",
        name: "My new chat",
        decoration: Immutable.Map {
          main_color: "#fefefe",
        },
      }
    }
  />
  <Container
    className="page-container"
    fluid={true}
    tag="div"
  >
    <Row
      tag="div"
    >
      <Col
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Form
          onSubmit={[Function]}
          tag="form"
        >
          <div
            className="mb-4"
          >
            <InputField
              label="Campaign name"
              name="name"
              onChange={[Function]}
              placeholder="My new campaign"
              required={true}
              type="input"
              value="My little campaign"
            />
          </div>
          <h5>
            Choose your audience
          </h5>
          <div
            className="mb-4"
          >
            <TriggerRow
              idx={0}
              key="0"
              nbOfTriggers={2}
              onDelete={[Function]}
              onOperatorChange={[Function]}
              onValueChange={[Function]}
              trigger={
                Immutable.Map {
                  key: "current_url",
                  operator: "contains",
                  value: "gorgias",
                }
              }
            />
            <TriggerRow
              idx={1}
              key="1"
              nbOfTriggers={2}
              onDelete={[Function]}
              onOperatorChange={[Function]}
              onValueChange={[Function]}
              trigger={
                Immutable.Map {
                  key: "time_spent_on_page",
                  operator: "gt",
                  value: 42,
                }
              }
            />
            <UncontrolledDropdown>
              <DropdownToggle
                aria-haspopup={true}
                caret={true}
                className="mr-2"
                color="secondary"
                type="button"
              >
                <i
                  className="material-icons mr-2"
                >
                  add
                </i>
                Add condition
              </DropdownToggle>
              <DropdownMenu
                flip={true}
                tag="div"
              >
                <DropdownItem
                  key="current_url"
                  onClick={[Function]}
                  tag="button"
                  toggle={true}
                  type="button"
                >
                  Current URL
                </DropdownItem>
                <DropdownItem
                  key="time_spent_on_page"
                  onClick={[Function]}
                  tag="button"
                  toggle={true}
                  type="button"
                >
                  Time spent on page
                </DropdownItem>
              </DropdownMenu>
            </UncontrolledDropdown>
          </div>
          <h5>
            Write your message
          </h5>
          <div
            className="mb-4"
          >
            <div
              className="mb-2 authorWrapper"
            >
              <span>
                From: 
              </span>
              <SelectField
                allowCustomValue={false}
                className="authorInput"
                fixedWidth={false}
                onChange={[Function]}
                onSearchChange={[Function]}
                options={
                  Array [
                    Object {
                      "label": <AgentLabel
                        avatar={false}
                        className=""
                        email=""
                        maxWidth="100"
                        name="John"
                        profilePictureUrl=""
                  />,
                      "text": "John",
                      "value": "john@gorgias.io",
                    },
                    Object {
                      "label": <AgentLabel
                        avatar={false}
                        className=""
                        email=""
                        maxWidth="100"
                        name="Doe"
                        profilePictureUrl=""
                  />,
                      "text": "Doe",
                      "value": "doe@gorgias.io",
                    },
                    Object {
                      "label": "Random agent",
                      "text": "randomagent",
                      "value": null,
                    },
                  ]
                }
                placeholder="Select an option"
                singular="option"
                style={Object {}}
                value="john@gorgias.io"
              />
            </div>
            <RichField
              displayedActions={
                Array [
                  "BOLD",
                  "ITALIC",
                  "UNDERLINE",
                  "IMAGE",
                  "EMOJI",
                ]
              }
              onChange={[Function]}
              placeholder="Write your message"
              required={true}
              rows="8"
              type="text"
              value={
                Object {
                  "html": "<div><img onerror=\\"alert(1)\\" src=\\"#\\"/>My little message</div>",
                }
              }
            />
          </div>
          <Button
            className=""
            color="success"
            tag="button"
          >
            Save
          </Button>
          <ConfirmButton
            className="float-right"
            color="secondary"
            confirm={[Function]}
            content="Are you sure you want to delete this campaign?"
            disabled={false}
            id="delete-campaign-button"
            loading={false}
            placement="bottom right"
            skip={false}
            title="Are you sure?"
            type="button"
          >
            <i
              className="material-icons mr-1 text-danger"
            >
              delete
            </i>
            Delete campaign
          </ConfirmButton>
        </Form>
      </Col>
      <Col
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <CampaignPreview
          authorAvatarUrl="https://gravatar.docker/as74d6as4d86as4dasd/avatar.jpg"
          authorName="John"
          html="<div><img src=\\"#\\" />My little message</div>"
          mainColor="#fefefe"
        />
      </Col>
    </Row>
  </Container>
</div>
`;

exports[`CampaignDetail component should display the campaign correctly when updating it and strip the html 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        tag="ol"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/app/settings/integrations"
          >
            Integrations
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/app/settings/integrations/smooch_inside/\${integration.get('id')}"
          >
            Chat
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          My new chat
        </BreadcrumbItem>
        <BreadcrumbItem
          tag="li"
        >
          <Link
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/app/settings/integrations/smooch_inside/1/campaigns"
          >
            Campaigns
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          active={true}
          tag="li"
        >
          My little campaign
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <RealtimeMessagingIntegrationNavigation
    integration={
      Immutable.Map {
        id: 1,
        type: "smooch_inside",
        name: "My new chat",
        decoration: Immutable.Map {
          main_color: "#fefefe",
        },
      }
    }
  />
  <Container
    className="page-container"
    fluid={true}
    tag="div"
  >
    <Row
      tag="div"
    >
      <Col
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <Form
          onSubmit={[Function]}
          tag="form"
        >
          <div
            className="mb-4"
          >
            <InputField
              label="Campaign name"
              name="name"
              onChange={[Function]}
              placeholder="My new campaign"
              required={true}
              type="input"
              value="My little campaign"
            />
          </div>
          <h5>
            Choose your audience
          </h5>
          <div
            className="mb-4"
          >
            <TriggerRow
              idx={0}
              key="0"
              nbOfTriggers={2}
              onDelete={[Function]}
              onOperatorChange={[Function]}
              onValueChange={[Function]}
              trigger={
                Immutable.Map {
                  key: "current_url",
                  operator: "contains",
                  value: "gorgias",
                }
              }
            />
            <TriggerRow
              idx={1}
              key="1"
              nbOfTriggers={2}
              onDelete={[Function]}
              onOperatorChange={[Function]}
              onValueChange={[Function]}
              trigger={
                Immutable.Map {
                  key: "time_spent_on_page",
                  operator: "gt",
                  value: 42,
                }
              }
            />
            <UncontrolledDropdown>
              <DropdownToggle
                aria-haspopup={true}
                caret={true}
                className="mr-2"
                color="secondary"
                type="button"
              >
                <i
                  className="material-icons mr-2"
                >
                  add
                </i>
                Add condition
              </DropdownToggle>
              <DropdownMenu
                flip={true}
                tag="div"
              >
                <DropdownItem
                  key="current_url"
                  onClick={[Function]}
                  tag="button"
                  toggle={true}
                  type="button"
                >
                  Current URL
                </DropdownItem>
                <DropdownItem
                  key="time_spent_on_page"
                  onClick={[Function]}
                  tag="button"
                  toggle={true}
                  type="button"
                >
                  Time spent on page
                </DropdownItem>
              </DropdownMenu>
            </UncontrolledDropdown>
          </div>
          <h5>
            Write your message
          </h5>
          <div
            className="mb-4"
          >
            <div
              className="mb-2 authorWrapper"
            >
              <span>
                From: 
              </span>
              <SelectField
                allowCustomValue={false}
                className="authorInput"
                fixedWidth={false}
                onChange={[Function]}
                onSearchChange={[Function]}
                options={
                  Array [
                    Object {
                      "label": <AgentLabel
                        avatar={false}
                        className=""
                        email=""
                        maxWidth="100"
                        name="John"
                        profilePictureUrl=""
                  />,
                      "text": "John",
                      "value": "john@gorgias.io",
                    },
                    Object {
                      "label": <AgentLabel
                        avatar={false}
                        className=""
                        email=""
                        maxWidth="100"
                        name="Doe"
                        profilePictureUrl=""
                  />,
                      "text": "Doe",
                      "value": "doe@gorgias.io",
                    },
                    Object {
                      "label": "Random agent",
                      "text": "randomagent",
                      "value": null,
                    },
                  ]
                }
                placeholder="Select an option"
                singular="option"
                style={Object {}}
                value="john@gorgias.io"
              />
            </div>
            <RichField
              displayedActions={
                Array [
                  "BOLD",
                  "ITALIC",
                  "UNDERLINE",
                  "IMAGE",
                  "EMOJI",
                ]
              }
              onChange={[Function]}
              placeholder="Write your message"
              required={true}
              rows="8"
              type="text"
              value={
                Object {
                  "html": "<div><img onerror=\\"alert(1)\\" src=\\"#\\"/>My little message</div>",
                }
              }
            />
          </div>
          <Button
            className=""
            color="success"
            tag="button"
          >
            Save
          </Button>
          <ConfirmButton
            className="float-right"
            color="secondary"
            confirm={[Function]}
            content="Are you sure you want to delete this campaign?"
            disabled={false}
            id="delete-campaign-button"
            loading={false}
            placement="bottom right"
            skip={false}
            title="Are you sure?"
            type="button"
          >
            <i
              className="material-icons mr-1 text-danger"
            >
              delete
            </i>
            Delete campaign
          </ConfirmButton>
        </Form>
      </Col>
      <Col
        tag="div"
        widths={
          Array [
            "xs",
            "sm",
            "md",
            "lg",
            "xl",
          ]
        }
      >
        <CampaignPreview
          authorAvatarUrl="https://gravatar.docker/as74d6as4d86as4dasd/avatar.jpg"
          authorName="John"
          html="<div><img src=\\"#\\" />My little message</div>"
          mainColor="#fefefe"
        />
      </Col>
    </Row>
  </Container>
</div>
`;
